Enhance Excel reporting functionality by adding a new endpoint for full reports, update .env file structure, and improve documentation. The new endpoint allows batch processing of all symbols, generating separate sheets for stocks and indices in the Excel report. Additionally, updated the README to emphasize security practices regarding credential management.

--- a/config_local.env
+++ b/config_local.env
@@ -3,10 +3,10 @@
 # =============================================================================
 
 # API Key de Financial Modeling Prep (para stocks)
-FMP_API_KEY=I0aJZOme1kFaQE7li29IKFfk2V6btcqB
+FMP_API_KEY=your_fmp_api_key_here
 
 # API Key de Alpha Vantage (para índices via ETFs)
-ALPHA_VANTAGE_KEY=PZHRYXFUZL3STKAV
+ALPHA_VANTAGE_KEY=your_alpha_vantage_key_here
 
 # =============================================================================
 # CONFIGURACIÓN DE BASE DE DATOS
@@ -18,8 +18,8 @@ DATABASE_URL=postgresql://user:password@localhost/fintrack
 # =============================================================================
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USER=nescool10001@gmail.com
-EMAIL_PASS=bndp fcme oyhh udyz
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASS=your_app_password_here
 EMAIL_RECIPIENT=nescool101@gmail.com
 
 # =============================================================================
@@ -37,6 +37,9 @@ GIN_MODE=debug
 # =============================================================================
 # INSTRUCCIONES:
 # 1. Copia este archivo como .env en la raíz del proyecto
-# 2. El archivo .env será ignorado por git (no se subirá al repositorio)
-# 3. Para producción, usa variables de entorno del sistema
+# 2. Actualiza los valores con tus credenciales reales
+# 3. El archivo .env será ignorado por git (no se subirá al repositorio)
+# 4. Para producción, usa variables de entorno del sistema
+# 
+# IMPORTANTE: Nunca subas credenciales reales a GitHub
 # ============================================================================= 
