--- a/config_local.env
+++ b/config_local.env
@@ -20,7 +20,7 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=your_email@gmail.com
 EMAIL_PASS=your_app_password_here
-EMAIL_RECIPIENT=nescool101@gmail.com
+EMAIL_RECIPIENT=nescool101@gmail.com,paulocesarcelis@gmail.com
 
 # =============================================================================
 # CONFIGURACIÓN DE AUTENTICACIÓN
