--- a/fly.toml
+++ b/fly.toml
@@ -1,35 +1,23 @@
-app = "fintrackgoland"
-primary_region = "iad"
+# fly.toml app configuration file generated for fintrackgoland on 2025-06-14T19:47:11Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'fintrackgoland'
+primary_region = 'bog'
 
 [build]
-
-[env]
-  PORT = "8080"
-  GIN_MODE = "release"
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
-
-[[http_service.checks]]
-  interval = "15s"
-  grace_period = "5s"
-  method = "GET"
-  path = "/health"
-  protocol = "http"
-  timeout = "10s"
-  tls_skip_verify = false
-
-[http_service.concurrency]
-  type = "connections"
-  hard_limit = 25
-  soft_limit = 20
+  processes = ['app']
 
 [[vm]]
-  memory = "256mb"
-  cpu_kind = "shared"
-  cpus = 1 
+  memory = '256mb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 256
